--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,7 @@
+---
+permalink: /index.html
+---
+
 <!-- Woah, this is a really cool place huh? Mr. Inspect element (or miss, I don't discriminate)-->
 <!DOCTYPE html>
 <html lang="en">
