--- a/public/arg/oh/ha/index.html
+++ b/public/arg/oh/ha/index.html
@@ -59,7 +59,7 @@
 
       <img
         class="block fixed ml-auto mr-auto mb-auto mt-auto w-6/12 ml-9-5vw cursor-default"
-        src="/public/404.svg"
+        src="../../../../public/404.svg"
         alt="404"
       />
 
