svg test conducted

--- a/public/404.html
+++ b/public/404.html
@@ -62,7 +62,7 @@ permalink: /404.html
 
       <img
         class="block fixed ml-auto mr-auto mb-auto mt-auto w-6/12 ml-9-5vw cursor-default"
-        src="../public/404.svg"
+        src="/public/404.svg"
         alt="404"
       />
 
