--- a/public/arg/oh/index.html
+++ b/public/arg/oh/index.html
@@ -58,7 +58,7 @@
 
       <img
         class="block fixed ml-auto mr-auto mb-auto mt-auto w-6/12 ml-24vw cursor-default"
-        src="../../../public/404.svg"
+        src="/public/404.svg"
         alt="404"
       />
 
