--- a/public/index.html
+++ b/public/index.html
@@ -316,7 +316,7 @@ permalink: /index.html
       </div>
 
       <div class="legacy left-0 top-0 cursor-pointer">
-        <a href="v1"><i class="fas fa-history"></i>JustStop Legacy</a>
+        <a href="v1/"><i class="fas fa-history"></i>JustStop Legacy</a>
       </div>
 
       <div class="footer px-2 left-0 bottom-0 cursor-default">
