--- a/public/arg/index.html
+++ b/public/arg/index.html
@@ -15,9 +15,12 @@
     />
     <meta name="description" content="maaatt" />
     <meta property="og:title" content="C:&#92;&gt;" />
-    <meta property="og:image" content="https://ibb.co/6wQ8RRM" />
+    <meta property="og:image" content="https://i.ibb.co/Rv3WqfT/download.png" />
     <meta property="og:description" content="&gt;_ 404?" />
-    <meta name="twitter:image" content="https://ibb.co/6wQ8RRM" />
+    <meta
+      name="twitter:image"
+      content="https://i.ibb.co/Rv3WqfT/download.png"
+    />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="matt.css" />
     <meta name="twitter:creator" content="@alloutofmatt" />
