--- a/public/mobile/index.html
+++ b/public/mobile/index.html
@@ -26,6 +26,7 @@
     <meta name="twitter:creator" content="@alloutofmatt" />
     <meta name="twitter:site" content="@alloutofmatt" />
     <meta name="theme-color" content="#2f3136" />
+    <canvas id="canvas"></canvas>
     <title>matt.css - mobile</title>
     <link
       href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
