--- a/public/arg/oh/index.html
+++ b/public/arg/oh/index.html
@@ -25,6 +25,7 @@
     <meta name="twitter:creator" content="@alloutofmatt" />
     <meta name="twitter:site" content="@alloutofmatt" />
     <meta name="theme-color" content="#2f3136" />
+    <canvas id="canvas"></canvas>
     <title>matt.css</title>
     <link
       href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
