--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@ permalink: /index.html
     <meta name="twitter:site" content="@alloutofmatt" />
     <meta name="theme-color" content="#2f3136" />
     <canvas id="spacer"></canvas>
+    <canvas id="canvas"></canvas>
     <title>matt.css</title>
     <link
       href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
