small file re-arrange

--- a/v1/index.html
+++ b/v1/index.html
@@ -37,8 +37,8 @@
       <span class="snowflake"></span>
     </div>
     <main>
-      <div class="disclaimer">*errors may occur</div>
-      <a class="return" href="../../"><i class="fas fa-history"></i>return</a>
+      <div class="fixed bottom-0">*errors may occur</div>
+      <a class="return" href="../"><i class="fas fa-history"></i>return</a>
       <h1 class="typewriter">punctuation</h1>
       <p>the determined programmer.</p>
       <ul class="fa-ul">
