--- a/arg/index.html
+++ b/arg/index.html
@@ -100,7 +100,7 @@
     </main>
 
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+    <script src="/anime.min.js"></script>
     <script src="/src/app.js"></script>
-    <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js"></script>
   </body>
 </html>
