--- a/public/404.html
+++ b/public/404.html
@@ -98,7 +98,7 @@ permalink: /404.html
     </main>
 
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+    <script src="/anime.min.js"></script>
     <script src="/src/app.js"></script>
-    <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js"></script>
   </body>
 </html>
