--- a/public/404.html
+++ b/public/404.html
@@ -86,6 +86,10 @@ permalink: /404.html
         <i class="fas fa-angle-double-left"></i> Go Back
       </div>
 
+      <div class="legacy right-0 top-0 cursor-pointer mt-2" id="theme-switcher">
+        <i class="far fa-moon"></i>
+      </div>
+
       <div class="footer px-2 left-0 bottom-0 cursor-default">
         © Matt, 2020
         <a
