--- a/arg/index.html
+++ b/arg/index.html
@@ -88,6 +88,10 @@
         <span class="hint-inner opacity-0 cursor-default">Nice try.</span>
       </div>
 
+      <div class="legacy right-0 top-0 cursor-pointer mt-2" id="theme-switcher">
+        <i class="far fa-moon"></i>
+      </div>
+
       <div class="footer px-2 left-0 bottom-0 cursor-default">
         © Matt, 2020
         <a
