--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@ permalink: /index.html
 
 <!-- Woah, this is a really cool place huh? Mr. Inspect element (or miss, I don't discriminate)-->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
   <head>
     <link rel="shortcut icon" href="/public/favicon.ico" />
     <link rel="icon" href="/public/favicon.ico" />
@@ -328,6 +328,10 @@ permalink: /index.html
 
       <div class="legacy left-0 top-0 cursor-pointer">
         <a href="/v1/"><i class="fas fa-history"></i>JustStop Legacy</a>
+      </div>
+
+      <div class="legacy right-0 top-0 cursor-pointer mt-2" id="theme-switcher">
+        <i class="far fa-moon"></i>
       </div>
 
       <div class="footer px-2 left-0 bottom-0 cursor-default">
