--- a/v1/index.html
+++ b/v1/index.html
@@ -37,7 +37,9 @@
       <span class="snowflake"></span>
     </div>
     <main>
-      <div class="fixed bottom-0">*errors may occur</div>
+      <div class="fixed bottom-0">
+        *errors may occur & information not accurate
+      </div>
       <a class="return" href="../"><i class="fas fa-history"></i>return</a>
       <h1 class="typewriter">punctuation</h1>
       <p>the determined programmer.</p>
