--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,7 @@ permalink: /index.html
             Hi, I'm Matt!
           </div>
           <div class="subtitle text-md font-medium cursor-default">
-            I'm a Front-End Web Developer!
+            I'm a Full Stack Web Developer!
           </div>
         </div>
         <div class="mt-4 text-left align-center overflow-auto buttons">
@@ -107,7 +107,7 @@ permalink: /index.html
           <div class="header text-xl font-bold text-center cursor-default">
             Languages
           </div>
-          <div class="mt-4 text-left align-center overflow-auto">
+          <div id="card-flip" class="mt-4 text-left align-center overflow-auto">
             <div>
               <a class="block py-button" href="#"
                 ><i class="fab fa-python"></i>python</a
@@ -134,7 +134,10 @@ permalink: /index.html
               >
             </div>
           </div>
-          <div class="mt-8 card-bottom text-left grid overflow-auto">
+          <div
+            id="nav-buttons"
+            class="mt-8 card-bottom text-left grid overflow-auto"
+          >
             <div>
               <span
                 onmouseout="unTooltip();"
@@ -146,13 +149,13 @@ permalink: /index.html
               ></span>
             </div>
             <div>
-              <!-- onclick="langFlip();" -->
               <span
+                onclick="langFlip();"
                 onmouseout="unTooltip();"
                 onmouseover="tooltipRight();"
                 class="flip"
                 href="#"
-                ><i class="fas fa-undo-alt cursor-not-allowed"></i
+                ><i class="fas fa-undo-alt"></i
               ></span>
             </div>
           </div>
