mobile title & lang upd

--- a/mobile/index.html
+++ b/mobile/index.html
@@ -56,7 +56,7 @@
             Hi, I'm Matt!
           </div>
           <div class="subtitle text-md font-medium cursor-default">
-            I'm a Front-End Web Developer!
+            I'm a Full Stack Web Developer!
           </div>
         </div>
         <div class="mt-4 text-left align-center ml-15vw mr-20vw overflow-auto">
@@ -113,6 +113,16 @@
             <div>
               <a class="block ml-15vw mr-20vw hover:shadow-lg lua" href="#"
                 ><i class="fas fa-file-alt"></i>lua</a
+              >
+            </div>
+            <div>
+              <a class="block ml-15vw mr-20vw hover:shadow-lg node" href="#"
+                ><i class="fab fa-node-js"></i>node</a
+              >
+            </div>
+            <div>
+              <a class="block ml-15vw mr-20vw hover:shadow-lg sql" href="#"
+                ><i class="fas fa-database"></i>sql</a
               >
             </div>
             <div>
