--- a/public/index.html
+++ b/public/index.html
@@ -220,9 +220,9 @@ permalink: /index.html
           </div>
           <div class="mt-4 text-left align-center overflow-auto">
             <div>
-              <a class="block" href="mailto:semi@programmer.net" target="_blank"
-                ><i class="fas fa-envelope"></i>semi<span class="text-xs"
-                  >@programmer.net</span
+              <a class="block" href="mailto:matt@dont-ping.me" target="_blank"
+                ><i class="fas fa-envelope"></i>matt<span class="text-xs"
+                  >@dont-ping.me</span
                 ></a
               >
             </div>
