--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@ permalink: /index.html
     <meta name="description" content="maaatt" />
     <meta property="og:title" content="C:&#92;&gt;" />
     <meta property="og:image" content="https://i.ibb.co/Rv3WqfT/download.png" />
-    <meta property="og:description" content="Front End Web Developer." />
+    <meta property="og:description" content="Full Stack Web Developer." />
     <meta
       name="twitter:image"
       content="https://i.ibb.co/Rv3WqfT/download.png"
