--- a/mobile/index.html
+++ b/mobile/index.html
@@ -126,6 +126,11 @@
               >
             </div>
             <div>
+              <a class="block ml-15vw mr-20vw hover:shadow-lg vue" href="#"
+                ><i class="fab fa-vuejs"></i>vue</a
+              >
+            </div>
+            <div>
               <a
                 class="block ml-15vw mr-20vw hover:shadow-lg"
                 onclick="back();"
