--- a/mobile/index.html
+++ b/mobile/index.html
@@ -265,7 +265,9 @@
       </div>
 
       <div class="legacy left-0 top-0 cursor-pointer">
-        <a href="/v1/"><i class="fas fa-history"></i>JustStop Legacy</a>
+        <a href="https://legacy.dont-ping.me"
+          ><i class="fas fa-history"></i>JustStop Legacy</a
+        >
       </div>
 
       <div class="footer px-2 left-0 bottom-0 cursor-default z-50">
