--- a/mobile/index.html
+++ b/mobile/index.html
@@ -265,7 +265,7 @@
       </div>
 
       <div class="legacy left-0 top-0 cursor-pointer">
-        <a href="https://legacy.dont-ping.me"
+        <a href="https://legacy.dont-ping.me/"
           ><i class="fas fa-history"></i>JustStop Legacy</a
         >
       </div>
