--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,9 @@ permalink: /index.html
 
   <body>
     <div id="loading">
+      <div>
+        <noscript><strong>Please enable JavaScript.</strong></noscript>
+      </div>
       <div
         id="comp-1"
         class="loading-component relative text-center rounded-lg shadow sm:shadow-md md:shadow-lg lg:shadow-xl xl:-2xl border-white p-4"
@@ -325,12 +328,10 @@ permalink: /index.html
         </div>
       </div>
 
-      <div>
-        <noscript><strong>Please enable JavaScript.</strong></noscript>
-      </div>
-
       <div class="legacy left-0 top-0 cursor-pointer">
-        <a href="/v1/"><i class="fas fa-history"></i>JustStop Legacy</a>
+        <a href="https://legacy.dont-ping.me/"
+          ><i class="fas fa-history"></i>JustStop Legacy</a
+        >
       </div>
 
       <div class="legacy right-0 top-0 cursor-pointer mt-2" id="theme-switcher">
