--- a/public/404.html
+++ b/public/404.html
@@ -5,8 +5,8 @@ permalink: /404.html
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="shortcut icon" href="favicon-error.ico" />
-    <link rel="icon" href="favicon-error.ico" />
+    <link rel="shortcut icon" href="/public/favicon-error.ico" />
+    <link rel="icon" href="/public/favicon-error.ico" />
     <meta charset="utf-8" />
     <meta
       name="viewport"
