--- a/public/index.html
+++ b/public/index.html
@@ -19,20 +19,20 @@ permalink: /index.html
     />
     <meta name="description" content="maaatt" />
     <meta property="og:title" content="C:&#92;&gt;" />
-    <meta property="og:image" content="https://i.ibb.co/Rv3WqfT/download.png" />
+    <meta property="og:image" content="https://i.ibb.co/GsBW1ZX/download.png" />
     <meta property="og:description" content="Full Stack Web Developer." />
     <meta
       name="twitter:image"
-      content="https://i.ibb.co/Rv3WqfT/download.png"
+      content="https://i.ibb.co/GsBW1ZX/download.png"
     />
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="matt.css" />
+    <meta name="twitter:title" content="matt.env" />
     <meta name="twitter:creator" content="@alloutofmatt" />
     <meta name="twitter:site" content="@alloutofmatt" />
     <meta name="theme-color" content="#2f3136" />
     <canvas id="spacer"></canvas>
     <canvas id="canvas"></canvas>
-    <title>matt.css</title>
+    <title>matt.env</title>
     <link
       href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
       rel="stylesheet"
@@ -72,7 +72,7 @@ permalink: /index.html
         <img
           id="profile-picture"
           class="h-24 w-24 rounded-full mx-auto"
-          src="https://i.ibb.co/6yTBsZK/laptop.jpg"
+          src="https://i.ibb.co/y696H4T/image0.png"
           alt="Me"
         />
         <div class="container mt-2">
