twitter img link

--- a/public/index.html
+++ b/public/index.html
@@ -72,6 +72,7 @@ permalink: /index.html
         <img
           id="profile-picture"
           class="h-24 w-24 rounded-full mx-auto"
+          onclick="window.location.href = 'https://twitter.com/alloutofmatt';"
           src="https://i.ibb.co/y696H4T/image0.png"
           alt="Me"
         />
