--- a/mobile/index.html
+++ b/mobile/index.html
@@ -48,6 +48,7 @@
         <img
           id="profile-picture"
           class="h-24 w-24 rounded-full mx-auto mt-50vh"
+          onclick="window.location.href = 'https://twitter.com/alloutofmatt';"
           src="https://i.ibb.co/y696H4T/image0.png"
           alt="Me"
         />
