Nothing to see here, move along

--- a/public/index.html
+++ b/public/index.html
@@ -241,7 +241,7 @@ permalink: /index.html
             </div>
             <div>
               <a class="block" href="https://discord.gg/SK53UMK" target="_blank"
-                ><i class="fab fa-discord"></i>YetAnotherMatt<span
+                ><i class="fab fa-discord"></i>yetanothermatt<span
                   class="text-xs"
                   >#0596</span
                 ></a
