--- a/mobile/index.html
+++ b/mobile/index.html
@@ -230,7 +230,7 @@
                 class="block ml-15vw mr-20vw hover:shadow-lg"
                 href="https://discord.gg/SK53UMK"
                 target="_blank"
-                ><i class="fab fa-discord"></i>YetAnotherMatt<span
+                ><i class="fab fa-discord"></i>yetanothermatt<span
                   class="text-xs"
                   >#0596</span
                 ></a
