--- a/mobile/index.html
+++ b/mobile/index.html
@@ -34,8 +34,8 @@
     />
     <link rel="stylesheet" href="/src/build/style.css" />
     <link
-      href="https://use.fontawesome.com/releases/v5.10.1/css/all.css"
       rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.13.1/css/all.css"
     />
   </head>
 
@@ -63,7 +63,7 @@
         <div class="mt-4 text-left align-center ml-15vw mr-20vw overflow-auto">
           <div>
             <a onclick="mobileLang();" class="block hover:shadow-lg" href="#"
-              ><i class="fas fa-laptop-code"></i>languages</a
+              ><i class="fad fa-brackets-curly"></i>languages</a
             >
           </div>
           <div>
@@ -71,12 +71,12 @@
               onclick="mobileProjects();"
               class="block hover:shadow-lg"
               href="#"
-              ><i class="fas fa-briefcase"></i>projects</a
+              ><i class="fad fa-business-time"></i>projects</a
             >
           </div>
           <div>
             <a onclick="mobileContact();" class="block hover:shadow-lg" href="#"
-              ><i class="fas fa-user"></i>contacts/socials</a
+              ><i class="fad fa-user"></i>contacts/socials</a
             >
           </div>
         </div>
@@ -113,7 +113,7 @@
             </div>
             <div>
               <a class="block ml-15vw mr-20vw hover:shadow-lg lua" href="#"
-                ><i class="fas fa-file-alt"></i>lua</a
+                ><i class="fad fa-file-alt"></i>lua</a
               >
             </div>
             <div>
@@ -123,7 +123,7 @@
             </div>
             <div>
               <a class="block ml-15vw mr-20vw hover:shadow-lg sql" href="#"
-                ><i class="fas fa-database"></i>sql</a
+                ><i class="fad fa-database"></i>sql</a
               >
             </div>
             <div>
@@ -136,7 +136,7 @@
                 class="block ml-15vw mr-20vw hover:shadow-lg"
                 onclick="back();"
                 href="#"
-                ><i class="fas fa-caret-left"></i>go back</a
+                ><i class="fad fa-caret-left"></i>go back</a
               >
             </div>
           </div>
@@ -158,12 +158,12 @@
           <div class="mt-4 text-left align-center overflow-auto">
             <div>
               <a class="block ml-15vw mr-20vw hover:shadow-lg utile" href="#"
-                ><i class="fas fa-robot"></i>utile</a
+                ><i class="fad fa-robot"></i>utile</a
               >
             </div>
             <div>
               <a class="block ml-15vw mr-20vw hover:shadow-lg miscord" href="#"
-                ><i class="fas fa-robot"></i>miscord</a
+                ><i class="fad fa-robot"></i>miscord</a
               >
             </div>
             <div>
@@ -171,14 +171,14 @@
                 class="block ml-15vw mr-20vw hover:shadow-lg"
                 href="https://github.com/punctuations/juststop"
                 target="_blank"
-                ><i class="fas fa-globe"></i>JustStop</a
+                ><i class="fad fa-globe"></i>JustStop</a
               >
             </div>
             <div>
               <a
                 class="block ml-15vw mr-20vw hover:shadow-lg github-projects"
                 href="#"
-                ><i class="fab fa-github"></i>github projects</a
+                ><i class="fad fa-code-branch"></i>github projects</a
               >
             </div>
             <div>
@@ -186,7 +186,7 @@
                 class="block ml-15vw mr-20vw hover:shadow-lg"
                 onclick="back();"
                 href="#"
-                ><i class="fas fa-caret-left"></i>go back</a
+                ><i class="fad fa-caret-left"></i>go back</a
               >
             </div>
           </div>
@@ -209,10 +209,10 @@
             <div>
               <a
                 class="block ml-15vw mr-20vw hover:shadow-lg"
-                href="mailto:semi@programmer.net"
+                href="mailto:matt@dont-ping.me"
                 target="_blank"
-                ><i class="fas fa-envelope"></i>semi<span class="text-xs"
-                  >@programmer.net</span
+                ><i class="fad fa-paper-plane"></i>matt<span class="text-xs"
+                  >@dont-ping.me</span
                 ></a
               >
             </div>
@@ -230,8 +230,7 @@
                 class="block ml-15vw mr-20vw hover:shadow-lg"
                 href="https://discord.gg/SK53UMK"
                 target="_blank"
-                ><i class="fab fa-discord"></i>mattt<span
-                  class="text-xs"
+                ><i class="fab fa-discord"></i>mattt<span class="text-xs"
                   >#0596</span
                 ></a
               >
@@ -258,7 +257,7 @@
                 class="block ml-15vw mr-20vw hover:shadow-lg"
                 onclick="back();"
                 href="#"
-                ><i class="fas fa-caret-left"></i>go back</a
+                ><i class="fad fa-caret-left"></i>go back</a
               >
             </div>
           </div>
@@ -267,12 +266,12 @@
 
       <div class="legacy left-0 top-0 cursor-pointer">
         <a href="https://legacy.dont-ping.me/"
-          ><i class="fas fa-history"></i>JustStop Legacy</a
+          ><i class="fad fa-history"></i>JustStop Legacy</a
         >
       </div>
 
       <div class="footer px-2 left-0 bottom-0 cursor-default z-50">
-        © Matt, 2020
+        <i class="fad fa-copyright mr-0"></i>Matt, 2020
         <a
           class="footer px-2 right-0 bottom-0 cursor-pointer"
           href="https://github.com/punctuations/juststop"
