--- a/public/index.html
+++ b/public/index.html
@@ -39,8 +39,8 @@ permalink: /index.html
     />
     <link rel="stylesheet" href="/src/build/style.css" />
     <link
-      href="https://use.fontawesome.com/releases/v5.10.1/css/all.css"
       rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.13.1/css/all.css"
     />
   </head>
 
@@ -87,17 +87,17 @@ permalink: /index.html
         <div class="mt-4 text-left align-center overflow-auto buttons">
           <div>
             <a onclick="langBtn();" class="block" href="#"
-              ><i class="fas fa-laptop-code"></i>languages</a
+              ><i class="fad fa-brackets-curly"></i>languages</a
             >
           </div>
           <div>
             <a onclick="projBtn();" class="block" href="#"
-              ><i class="fas fa-briefcase"></i>projects</a
+              ><i class="fad fa-business-time"></i>projects</a
             >
           </div>
           <div>
             <a onclick="contactBtn();" class="block" href="#"
-              ><i class="fas fa-user"></i>contacts/socials</a
+              ><i class="fad fa-user"></i>contacts/socials</a
             >
           </div>
         </div>
@@ -134,7 +134,7 @@ permalink: /index.html
             </div>
             <div>
               <a class="block lua-button" href="#"
-                ><i class="fas fa-file-alt"></i>lua</a
+                ><i class="fad fa-file-alt"></i>lua</a
               >
             </div>
           </div>
@@ -149,7 +149,7 @@ permalink: /index.html
                 onclick="homeCard();"
                 class="return"
                 href="#"
-                ><i class="fas fa-long-arrow-alt-left"></i
+                ><i class="fad fa-long-arrow-alt-left"></i
               ></span>
             </div>
             <div>
@@ -159,7 +159,7 @@ permalink: /index.html
                 onmouseover="tooltipRight();"
                 class="flip"
                 href="#"
-                ><i class="fas fa-undo-alt"></i
+                ><i class="fad fa-undo-alt"></i
               ></span>
             </div>
           </div>
@@ -177,12 +177,12 @@ permalink: /index.html
           <div class="mt-4 text-left align-center overflow-auto">
             <div>
               <a class="block utile-button" href="#"
-                ><i class="fas fa-robot"></i>utile bot</a
+                ><i class="fad fa-robot"></i>utile bot</a
               >
             </div>
             <div>
               <a class="block miscord-button" href="#"
-                ><i class="fas fa-robot"></i>miscord bot</a
+                ><i class="fad fa-robot"></i>miscord bot</a
               >
             </div>
             <div>
@@ -190,12 +190,12 @@ permalink: /index.html
                 class="block"
                 href="https://github.com/punctuations/juststop"
                 target="_blank"
-                ><i class="fas fa-globe"></i>JustStop</a
+                ><i class="fad fa-globe"></i>JustStop</a
               >
             </div>
             <div>
               <a class="block github-proj-button" href="#"
-                ><i class="fab fa-github"></i>github projects</a
+                ><i class="fad fa-code-branch"></i>github projects</a
               >
             </div>
           </div>
@@ -207,7 +207,7 @@ permalink: /index.html
                 onclick="homeCard();"
                 class="return"
                 href="#"
-                ><i class="fas fa-long-arrow-alt-left"></i
+                ><i class="fad fa-long-arrow-alt-left"></i
               ></span>
             </div>
           </div>
@@ -225,7 +225,7 @@ permalink: /index.html
           <div class="mt-4 text-left align-center overflow-auto">
             <div>
               <a class="block" href="mailto:matt@dont-ping.me" target="_blank"
-                ><i class="fas fa-envelope"></i>matt<span class="text-xs"
+                ><i class="fad fa-paper-plane"></i>matt<span class="text-xs"
                   >@dont-ping.me</span
                 ></a
               >
@@ -241,8 +241,7 @@ permalink: /index.html
             </div>
             <div>
               <a class="block" href="https://discord.gg/SK53UMK" target="_blank"
-                ><i class="fab fa-discord"></i>mattt<span
-                  class="text-xs"
+                ><i class="fab fa-discord"></i>mattt<span class="text-xs"
                   >#0596</span
                 ></a
               >
@@ -273,7 +272,7 @@ permalink: /index.html
                 onclick="homeCard();"
                 class="return"
                 href="#"
-                ><i class="fas fa-long-arrow-alt-left"></i
+                ><i class="fad fa-long-arrow-alt-left"></i
               ></span>
             </div>
           </div>
@@ -331,16 +330,16 @@ permalink: /index.html
 
       <div class="legacy left-0 top-0 cursor-pointer">
         <a href="https://legacy.dont-ping.me/"
-          ><i class="fas fa-history"></i>JustStop Legacy</a
+          ><i class="fad fa-history"></i>JustStop Legacy</a
         >
       </div>
 
       <div class="legacy right-0 top-0 cursor-pointer mt-2" id="theme-switcher">
-        <i class="far fa-moon"></i>
+        <i class="fad fa-moon"></i>
       </div>
 
       <div class="footer px-2 left-0 bottom-0 cursor-default">
-        © Matt, 2020
+        <i class="fad fa-copyright mr-0"></i>Matt, 2020
         <a
           class="footer px-2 right-0 bottom-0 cursor-pointer"
           href="https://github.com/punctuations/juststop"
