--- a/mobile/index.html
+++ b/mobile/index.html
@@ -52,6 +52,7 @@
           src="https://i.ibb.co/y696H4T/image0.png"
           alt="Me"
         />
+        <div id="spotify"></div>
         <div class="container mt-2">
           <div class="header text-xl font-bold cursor-default">
             Hi, I'm Matt!
