--- a/public/index.html
+++ b/public/index.html
@@ -76,6 +76,7 @@ permalink: /index.html
           src="https://i.ibb.co/y696H4T/image0.png"
           alt="Me"
         />
+        <div id="spotify"></div>
         <div class="container mt-2">
           <div class="header text-xl font-bold cursor-default">
             Hi, I'm Matt!
