--- a/public/index.html
+++ b/public/index.html
@@ -336,7 +336,7 @@ permalink: /index.html
       </div>
 
       <div class="legacy right-0 top-0 cursor-pointer mt-2" id="theme-switcher">
-        <i class="fad fa-moon"></i>
+        <i class="far fa-moon"></i>
       </div>
 
       <div class="footer px-2 left-0 bottom-0 cursor-default">
