--- a/arg/oh/ha/index.html
+++ b/arg/oh/ha/index.html
@@ -15,19 +15,22 @@
     />
     <meta name="description" content="maaatt" />
     <meta property="og:title" content="C:&#92;&gt;" />
-    <meta property="og:image" content="https://i.ibb.co/GsBW1ZX/download.png" />
+    <meta
+      property="og:image"
+      content="https://i.ibb.co/zxS860S/dontpingme.png"
+    />
     <meta property="og:description" content="&gt;_ 404." />
     <meta
       name="twitter:image"
-      content="https://i.ibb.co/GsBW1ZX/download.png"
+      content="https://i.ibb.co/zxS860S/dontpingme.png"
     />
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="matt.env" />
+    <meta name="twitter:title" content="matt.md" />
     <meta name="twitter:creator" content="@alloutofmatt" />
     <meta name="twitter:site" content="@alloutofmatt" />
     <meta name="theme-color" content="#2f3136" />
     <canvas id="canvas"></canvas>
-    <title>matt.env</title>
+    <title>matt.md</title>
     <link
       href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
       rel="stylesheet"
@@ -83,7 +86,7 @@
         <i class="fas fa-angle-double-left"></i> Go Back
       </div>
 
-      <div class="legacy right-0 top-0 cursor-pointer mt-2" id="theme-switcher">
+      <div class="legacy right-0 top-0 hidden mt-2" id="theme-switcher">
         <i class="far fa-moon"></i>
       </div>
 
