--- a/mobile/index.html
+++ b/mobile/index.html
@@ -14,20 +14,23 @@
       content="HTML, CSS, Bootstrap, Punctuation, JavaScript, Matt, Matthew, Tailwind"
     />
     <meta name="description" content="maaatt" />
-    <meta property="og:title" content="C:&#92;&gt;" />
-    <meta property="og:image" content="https://i.ibb.co/GsBW1ZX/download.png" />
-    <meta property="og:description" content="Full Stack Web Developer." />
+    <meta property="og:title" content="C:&#92;&gt; Mobile_" />
+    <meta
+      property="og:image"
+      content="https://i.ibb.co/zxS860S/dontpingme.png"
+    />
+    <meta property="og:description" content="Full Stack JavaScript Engineer." />
     <meta
       name="twitter:image"
-      content="https://i.ibb.co/GsBW1ZX/download.png"
+      content="https://i.ibb.co/zxS860S/dontpingme.png"
     />
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="matt.env" />
+    <meta name="twitter:title" content="matt.md - mobile" />
     <meta name="twitter:creator" content="@alloutofmatt" />
     <meta name="twitter:site" content="@alloutofmatt" />
     <meta name="theme-color" content="#2f3136" />
     <canvas id="canvas"></canvas>
-    <title>matt.env - mobile</title>
+    <title>matt.md - mobile</title>
     <link
       href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
       rel="stylesheet"
@@ -58,7 +61,7 @@
             Hi, I'm Matt!
           </div>
           <div class="subtitle text-md font-medium cursor-default">
-            I'm a Full Stack Web Developer!
+            I'm a Full Stack JavaScript Engineer!
           </div>
         </div>
         <div class="mt-4 text-left align-center ml-15vw mr-20vw overflow-auto">
