--- a/public/index.html
+++ b/public/index.html
@@ -19,20 +19,23 @@ permalink: /index.html
     />
     <meta name="description" content="maaatt" />
     <meta property="og:title" content="C:&#92;&gt;" />
-    <meta property="og:image" content="https://i.ibb.co/GsBW1ZX/download.png" />
-    <meta property="og:description" content="Full Stack Web Developer." />
+    <meta
+      property="og:image"
+      content="https://i.ibb.co/zxS860S/dontpingme.png"
+    />
+    <meta property="og:description" content="Full Stack JavaScript Engineer." />
     <meta
       name="twitter:image"
-      content="https://i.ibb.co/GsBW1ZX/download.png"
+      content="https://i.ibb.co/zxS860S/dontpingme.png"
     />
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="matt.env" />
+    <meta name="twitter:title" content="matt.md" />
     <meta name="twitter:creator" content="@alloutofmatt" />
     <meta name="twitter:site" content="@alloutofmatt" />
     <meta name="theme-color" content="#2f3136" />
     <canvas id="spacer"></canvas>
     <canvas id="canvas"></canvas>
-    <title>matt.env</title>
+    <title>matt.md</title>
     <link
       href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
       rel="stylesheet"
@@ -82,7 +85,7 @@ permalink: /index.html
             Hi, I'm Matt!
           </div>
           <div class="subtitle text-md font-medium cursor-default">
-            I'm a Full Stack Web Developer!
+            Full Stack JavaScript Engineer!
           </div>
         </div>
         <div class="mt-4 text-left align-center overflow-auto buttons">
