fix twitter link

--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,7 @@ permalink: /index.html
         <img
           id="profile-picture"
           class="h-24 w-24 rounded-full mx-auto"
-          onclick="window.location.href = 'https://twitter.com/alloutofmatt';"
+          onclick="window.open('https://twitter.com/alloutofmatt','_blank');"
           src="https://i.ibb.co/y696H4T/image0.png"
           alt="Me"
         />
