--- a/mobile/index.html
+++ b/mobile/index.html
@@ -51,7 +51,7 @@
         <img
           id="profile-picture"
           class="h-24 w-24 rounded-full mx-auto mt-50vh"
-          onclick="window.location.href = 'https://twitter.com/alloutofmatt';"
+          onclick="window.open('https://twitter.com/alloutofmatt','_blank');"
           src="https://i.ibb.co/y696H4T/image0.png"
           alt="Me"
         />
