--- a/mobile/index.html
+++ b/mobile/index.html
@@ -15,14 +15,11 @@
     />
     <meta name="description" content="maaatt" />
     <meta property="og:title" content="C:&#92;&gt; Mobile_" />
-    <meta
-      property="og:image"
-      content="https://i.ibb.co/zxS860S/dontpingme.png"
-    />
+    <meta property="og:image" content="https://i.ibb.co/BjBzwHT/download.png" />
     <meta property="og:description" content="Full Stack JavaScript Engineer." />
     <meta
       name="twitter:image"
-      content="https://i.ibb.co/zxS860S/dontpingme.png"
+      content="https://i.ibb.co/BjBzwHT/download.png"
     />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="matt.md - mobile" />
@@ -52,7 +49,7 @@
           id="profile-picture"
           class="h-24 w-24 rounded-full mx-auto mt-50vh"
           onclick="window.open('https://twitter.com/alloutofmatt','_blank');"
-          src="https://i.ibb.co/y696H4T/image0.png"
+          src="https://i.ibb.co/WKhqLsZ/image2.png"
           alt="Me"
         />
         <div id="spotify"></div>
