--- a/public/404.html
+++ b/public/404.html
@@ -18,14 +18,11 @@ permalink: /404.html
     />
     <meta name="description" content="maaatt" />
     <meta property="og:title" content="C:&#92;&gt;" />
-    <meta
-      property="og:image"
-      content="https://i.ibb.co/zxS860S/dontpingme.png"
-    />
+    <meta property="og:image" content="https://i.ibb.co/BjBzwHT/download.png" />
     <meta property="og:description" content="&gt;_ 404." />
     <meta
       name="twitter:image"
-      content="https://i.ibb.co/zxS860S/dontpingme.png"
+      content="https://i.ibb.co/BjBzwHT/download.png"
     />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="matt.md" />
