--- a/public/index.html
+++ b/public/index.html
@@ -19,14 +19,11 @@ permalink: /index.html
     />
     <meta name="description" content="maaatt" />
     <meta property="og:title" content="C:&#92;&gt;" />
-    <meta
-      property="og:image"
-      content="https://i.ibb.co/zxS860S/dontpingme.png"
-    />
+    <meta property="og:image" content="https://i.ibb.co/BjBzwHT/download.png" />
     <meta property="og:description" content="Full Stack JavaScript Engineer." />
     <meta
       name="twitter:image"
-      content="https://i.ibb.co/zxS860S/dontpingme.png"
+      content="https://i.ibb.co/BjBzwHT/download.png"
     />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="matt.md" />
@@ -76,7 +73,7 @@ permalink: /index.html
           id="profile-picture"
           class="h-24 w-24 rounded-full mx-auto"
           onclick="window.open('https://twitter.com/alloutofmatt','_blank');"
-          src="https://i.ibb.co/y696H4T/image0.png"
+          src="https://i.ibb.co/WKhqLsZ/image2.png"
           alt="Me"
         />
         <div id="spotify"></div>
