--- a/mobile/index.html
+++ b/mobile/index.html
@@ -49,7 +49,7 @@
           id="profile-picture"
           class="h-24 w-24 rounded-full mx-auto mt-50vh"
           onclick="window.open('https://twitter.com/alloutofmatt','_blank');"
-          src="https://i.ibb.co/WKhqLsZ/image2.png"
+          src="https://i.ibb.co/3C2d889/circle.png"
           alt="Me"
         />
         <div id="spotify"></div>
