--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@ permalink: /index.html
           id="profile-picture"
           class="h-24 w-24 rounded-full mx-auto"
           onclick="window.open('https://twitter.com/alloutofmatt','_blank');"
-          src="https://i.ibb.co/WKhqLsZ/image2.png"
+          src="https://i.ibb.co/3C2d889/circle.png"
           alt="Me"
         />
         <div id="spotify"></div>
