--- a/mobile/index.html
+++ b/mobile/index.html
@@ -204,7 +204,7 @@
       >
         <div class="container mt-2 mt-50vh">
           <div class="header text-xl font-bold text-center cursor-default">
-            Projects
+            Contact
           </div>
           <div class="mt-4 text-left align-center overflow-auto">
             <div>
